--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,18 @@
     color: white;
 }
 
+.Quiz-header {
+    width: 100%;
+    background-color: #30cfb5;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
 .App-link {
     color: #61dafb;
 }
